--- a/style.css
+++ b/style.css
@@ -32,10 +32,17 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2% 6%;
     box-shadow: 8px 0px #334d4d;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: #334d4d;
+    width: 100%;
+   position: fixed;
+   top: 0;
+   padding: 2%;
+   padding-left: 0;
+   padding-right: 0;
+   z-index: 1000;
 }
 .header h1{
     color: #fff;
@@ -92,6 +99,17 @@ nav ul li:hover::after{
 }
 .content p{
     font-size: 1.1rem;
+    font-size: 1.2rem;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    font-weight: 500;
+    /* width: 60%; */
+}
+.content span{
+    color: #334d4d;
+    color: #669999;
+   /* color: #436363; */
+   /* color: #000; */
 }
 .con-btn{
     text-decoration: none;
@@ -116,13 +134,12 @@ nav ul li:hover::after{
     display: none;
     
     }
-.header{
-    background-color: #334d4d;
-   align-items: center;
-   position: fixed;
-   top: 0;
-   width: 100%;
-   z-index: 1000;
+.inner-header{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
+  
 }
 
 
@@ -138,11 +155,12 @@ nav ul li:hover::after{
     
 }
 /* Responsiveness for homepage */
-@media screen and (max-width:768px){
+@media (max-width:700px) {
     .header{
-        padding: 3% 8%;
+        padding: 3% 0;
     }
 }
+
 @media (max-width:700px) {
     nav ul li{
         display: block;
@@ -173,6 +191,7 @@ nav ul li:hover::after{
         cursor: pointer; 
           
     }
+    
     .cancel-button{
         margin-bottom: 10px;
     }
@@ -660,6 +679,17 @@ strong{
     outline: none;
 }
 #reset-bmi{display: none;}
+#reset-input-field{
+    width: 100px;
+    height: 40px;
+    cursor: pointer;
+    outline: none;
+    border: 2px solid #669999;
+    background-color: #334d4d;
+    border-radius: 4px;
+    font: bold;
+    color: white;
+}
 .bmi-divider{
     display: flex;
     align-items: center;
@@ -822,14 +852,17 @@ footer {
     margin: 20px 0px;
     padding: 50px 0;
     display: flex;
-    width: 90%;
-   
+    justify-content: space-between;
+    min-width: 90%;
+    /* background-color: green; */
 }
 
 footer div {
     text-align: center;
-    flex: 2; 
-    padding: 0 20px; 
+    text-align: left;
+    /* flex: 2;  */
+    margin-right: 20px;
+    /* background-color: red; */
 }
 
 .col-1 a {
@@ -845,6 +878,21 @@ footer div {
     color: #669999;
     font-size: 17px;
 }
+
+footer .col-2{
+    text-align: center;
+    min-width: 33.3%;
+}
+footer .col-3{
+    text-align: left;
+   
+    min-width: 15%;
+}
+footer .col-1{
+    min-width: 15%;
+}
+
+
 
 
 footer div h3 {
@@ -910,15 +958,27 @@ form button:hover{
 }
 /* Media queries for responsiveness */
 @media screen and (max-width: 768px) {
+    footer div {
+        margin: 0;
+        margin-bottom: 40px;
+   
+    }
+    
     footer {
         flex-direction: column; 
         align-items: center; 
+        padding-bottom: 0;
     }
     
     footer .col-1, footer .col-2, footer .col-3 {
-        padding-top: 50px ; 
+        text-align: center;
         width: 100%;
+      
     }
+    footer .col-3{
+        margin-bottom: 0;  
+    }
+    
 
     form input {
         /* max-width: 100%;  */
@@ -932,9 +992,11 @@ form button:hover{
         margin-top: 0px;
         margin-bottom: 0;
         padding: 0px;
+        margin: 0 auto;
+       text-align: center;
     }
     footer .col-3 p{
-        margin: 15px;
+        margin: 15px 0;
     }
     .col-1 a {
         margin-top: 15px;
